--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue3-datepicker": "^0.3.4",
+    "vuedraggable": "^4.1.0",
     "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
